# spherical_deep_fixel

./: .gitignore  LICENSE  README.md  pyproject.toml  run_deep_fixel.py  run_pretrained_deep_fixel.py
scripts/: run000_create_results_csv.py  run001_create_qual_results.py  run002_run_sensitivity_analysis.py  run003_create_quant_results.py  total_results.csv
scripts/add_noise/: run000_simulate_noise.py  run001_dataset_with_noise.py  run002_run_deep_fixel_with_noise.py
src/deep_fixel/: dataset.py  models.py  run.py  utils.py
src/fissile/: __init__.py  run.py
