[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_fixel"
version = "1.0.0"
authors = [
    {name = "Adam Saunders", email = "adam.m.saunders@vanderbilt.edu"}
]
description = "Deep learning-based identification of crossing fiber bundle elements"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "cmcrameri>=1.9",
    "dipy>=1.10.0",
    "matplotlib>=3.10.1",
    "nibabel>=5.3.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "trimesh>=4.6.4",
    "wandb>=0.19.7",
]

[project.urls]
Homepage = "https://github.com/MASILab/deep_fixel"
