[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_fixel"
version = "1.0.0"
authors = [
    {name = "Adam Saunders", email = "adam.m.saunders@vanderbilt.edu"}
]
description = "Deep learning-based identification of crossing fiber bundle elements"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "cmcrameri>=1.9",
    "dipy>=1.10.0",
    "h5py==3.11.0",
    "healpy==1.16.6",
    "joblib==1.4.2",
    "matplotlib==3.9.0",
    "nibabel==5.2.1",
    "numpy<2",
    "pandas==2.2.2",
    "pygsp==0.5.1",
    "pyyaml==6.0.1",
    "scipy==1.13.0",
    "tensorboard==2.16.2",
    "torch==2.3.0",
    "torchaudio==2.3.0",
    "torchvision==0.18.0",
    "tqdm>=4.67.1",
    "trimesh>=4.6.4",
    "wandb>=0.19.7",
]

[project.urls]
Homepage = "https://github.com/MASILab/deep_fixel"
